[gd_scene load_steps=4 format=2]

[ext_resource path="res://scene/gui/DebugVBox.gd" type="Script" id=1]
[ext_resource path="res://scene/gui/GUIText.tscn" type="PackedScene" id=2]
[ext_resource path="res://scene/gui/GUIInputBox.tscn" type="PackedScene" id=4]

[node name="DebugGUI" type="MarginContainer"]
margin_left = 40.0
margin_top = 40.0
margin_right = 760.0
margin_bottom = 560.0

[node name="DebugVBox" type="VBoxContainer" parent="."]
margin_right = 720.0
margin_bottom = 520.0
script = ExtResource( 1 )

[node name="Header" parent="DebugVBox" instance=ExtResource( 2 )]
margin_right = 720.0
margin_bottom = 120.0
size_flags_vertical = 3
text = "Debug"

[node name="SettingVBox" type="VBoxContainer" parent="DebugVBox"]
margin_top = 124.0
margin_right = 720.0
margin_bottom = 485.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 3.0

[node name="Seed" type="HBoxContainer" parent="DebugVBox/SettingVBox"]
margin_right = 720.0
margin_bottom = 41.0

[node name="GUIText" parent="DebugVBox/SettingVBox/Seed" instance=ExtResource( 2 )]
margin_right = 119.0
margin_bottom = 41.0
size_flags_horizontal = 3
text = "Seed"
valign = 1

[node name="GUIInput" parent="DebugVBox/SettingVBox/Seed" instance=ExtResource( 4 )]
margin_left = 123.0
margin_right = 720.0
margin_bottom = 41.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 5.0

[node name="IncludeWorld" type="HBoxContainer" parent="DebugVBox/SettingVBox"]
margin_top = 45.0
margin_right = 720.0
margin_bottom = 86.0

[node name="GUIText" parent="DebugVBox/SettingVBox/IncludeWorld" instance=ExtResource( 2 )]
margin_right = 119.0
margin_bottom = 41.0
size_flags_horizontal = 3
text = "Include"
valign = 1

[node name="GUIInput" parent="DebugVBox/SettingVBox/IncludeWorld" instance=ExtResource( 4 )]
margin_left = 123.0
margin_right = 720.0
margin_bottom = 41.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 5.0

[node name="WizardMode" type="HBoxContainer" parent="DebugVBox/SettingVBox"]
margin_top = 90.0
margin_right = 720.0
margin_bottom = 131.0

[node name="GUIText" parent="DebugVBox/SettingVBox/WizardMode" instance=ExtResource( 2 )]
margin_right = 119.0
margin_bottom = 41.0
size_flags_horizontal = 3
text = "Wizard"
valign = 1

[node name="GUIInput" parent="DebugVBox/SettingVBox/WizardMode" instance=ExtResource( 4 )]
margin_left = 123.0
margin_right = 720.0
margin_bottom = 41.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 5.0

[node name="ExcludeWorld" type="HBoxContainer" parent="DebugVBox/SettingVBox"]
margin_top = 135.0
margin_right = 720.0
margin_bottom = 176.0

[node name="GUIText" parent="DebugVBox/SettingVBox/ExcludeWorld" instance=ExtResource( 2 )]
margin_right = 119.0
margin_bottom = 41.0
size_flags_horizontal = 3
text = "Exclude"
valign = 1

[node name="GUIInput" parent="DebugVBox/SettingVBox/ExcludeWorld" instance=ExtResource( 4 )]
margin_left = 123.0
margin_right = 720.0
margin_bottom = 41.0
focus_previous = NodePath("../../WizardMode/GUIInput")
size_flags_horizontal = 3
size_flags_stretch_ratio = 5.0

[node name="ShowFullMap" type="HBoxContainer" parent="DebugVBox/SettingVBox"]
margin_top = 180.0
margin_right = 720.0
margin_bottom = 221.0

[node name="GUIText" parent="DebugVBox/SettingVBox/ShowFullMap" instance=ExtResource( 2 )]
margin_right = 119.0
margin_bottom = 41.0
size_flags_horizontal = 3
text = "Reveal"
valign = 1

[node name="GUIInput" parent="DebugVBox/SettingVBox/ShowFullMap" instance=ExtResource( 4 )]
margin_left = 123.0
margin_right = 720.0
margin_bottom = 41.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 5.0

[node name="MouseInput" type="HBoxContainer" parent="DebugVBox/SettingVBox"]
margin_top = 225.0
margin_right = 720.0
margin_bottom = 266.0

[node name="GUIText" parent="DebugVBox/SettingVBox/MouseInput" instance=ExtResource( 2 )]
margin_right = 119.0
margin_bottom = 41.0
size_flags_horizontal = 3
text = "Mouse"
valign = 1

[node name="GUIInput" parent="DebugVBox/SettingVBox/MouseInput" instance=ExtResource( 4 )]
margin_left = 123.0
margin_right = 720.0
margin_bottom = 41.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 5.0

[node name="Footer" parent="DebugVBox" instance=ExtResource( 2 )]
margin_top = 489.0
margin_right = 720.0
margin_bottom = 520.0
size_flags_vertical = 9
text = "Version"
align = 2
valign = 2
